--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1> OMG! I can't believe I am working on my new project</h1>
     <h3>feeling relaxed</h3>
+    <p> lets go for the party</p>
 </body>
 </html>
