--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1> OMG! I can't believe I am working on my new project</h1>
     <h3>feeling relaxed</h3>
     <p> lets go for the party</p>
+    <img src="download.png" alt="">
 </body>
 </html>
